# kusto-tree

./: .gitignore  README.md  kusto_explorer.py  pyproject.toml
.github/: copilot-instructions.md
.temp/: copilot-instructions.bak.md  instruct.md
